# crab-db-alloc

./: Cargo.toml  README.md
crab-dads/: Cargo.toml
crab-dads/src/: btree.rs  lib.rs  rev_sized_array.rs  trailer.rs
crab-dads/src/arrays/: keyval_array.rs  mod.rs  rev_sized_array.rs  sized_array.rs  unsized_array.rs
crab-dads/src/btree/: mod.rs  reader.rs  writer.rs
crab-dads/src/page/: mod.rs  page_map.rs  traits.rs  u64_u64.rs  u64_var.rs  var_u64.rs
crab-db/: Cargo.toml
crab-db/src/: block_owned.rs  error.rs  int_page.rs  lib.rs
src/: block.rs  error.rs  int_page.rs  lib.rs  page.rs  storage.rs
src/pages/: header.rs  keyval_array.rs  mod.rs  sized_array.rs
