[package]
name = "crab-db-alloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.9"
thiserror = "1"
fs4 = "0.10"
page_size = "0.6"
byteorder = "1"
bytemuck = { version = "1", features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }